Allowed more room for question labels as browser winders are generally wider than they were in 2006. Fixed the display for date range searches - the standard label being reused was too wide.
git-svn-id: http://svn.montala.net/svn/resourcespace@4324 c08608d7-6e46-0410-86ca-f2a6f1370df5

--- a/css/global.css
+++ b/css/global.css
@@ -187,8 +187,8 @@ option {font-size:11px;}
 #CentralSpaceLogin form {margin:0;padding:0;}
 .Question{padding: 0.5em 0em 1em;}
 .QuestionSubmit{	padding: 0.75em 0em 1em;margin-top: 1em;}
-.Question label, .QuestionSubmit label{	width: 150px;float: left;margin-top: 0.4em;}
-.Question #capswarning { margin-left: 150px; display: none; color: red;font-weight: bold;}
+.Question label, .QuestionSubmit label{	width: 190px;float: left;margin-top: 0.4em;}
+.Question #capswarning { margin-left: 190px; display: none; color: red;font-weight: bold;}
 .Question .Lineup {margin: 3px 0px;}
 .Question .stdwidth,.stdwidth{width: 360px;font: 11px Tahoma, Arial, Helvetica, sans-serif;margin: 3px 0px;}
 .Question .medwidth,.medwidth{width: 250px;font: 11px Tahoma, Arial, Helvetica, sans-serif;margin: 3px 0px;}
@@ -197,14 +197,13 @@ option {font-size:11px;}
 .Question .medcomplementwidth{width: 105px;font: 11px Tahoma, Arial, Helvetica, sans-serif;margin: 3px 0px 0px 2px;}
 .Question .Inline {float: left;margin: 3px 10px 0px 0px;}
 .Question .tickset {float: left;}
-.Question .OptionTable, .Question .OptionToggle {margin: 0 0 0 150px;padding:0;}
-
+.Question .OptionTable, .Question .OptionToggle {margin: 0 0 0 190px;padding:0;}
+.Question .InnerLabel {width:60px};
 
 .Question .Fixed {    width: 300px;float: left;margin-top: 0.4em;font-weight: bold;} 
-.FormError{font-weight: bold;font-size: 1.1em;margin: 0px 0px 10px 150px;padding: 10px 0px 0px;}
+.FormError{font-weight: bold;font-size: 1.1em;margin: 0px 0px 10px 190px;padding: 10px 0px 0px;}
 .FormIncorrect {font-weight: bold;font-size: 1.1em;margin: 0px 0px 25px;text-align: center;padding: 3px 3px 6px;}
 .PageInformal {font-weight: bold;font-size: 1.1em;margin: 0px 0px 25px;text-align: center;padding: 3px 3px 6px;}
-.xAutoSaveStatus {font-weight: bold;margin: 0px 0px 10px 150px;padding-top: 4px;}
 .AutoSaveStatus {font-weight: bold;float:right;padding:6px 0 0;}
 
 /*Record Panel layout*/
@@ -390,7 +389,7 @@ div.autocomplete ul li {
 
 #overlay{ position: absolute; top: 0; left: 0; z-index: 90; width: 100%; height: 500px; background-color: #000; }
 
-.FormHelp{margin: 0px 0px 10px 150px;padding: 0;}
+.FormHelp{margin: 0px 0px 10px 190px;padding: 0;}
 .FormHelpInner{background-color:#ffffff;border:1px solid #000000;    border-radius:3px;-moz-border-radius:3px;-webkit-border-radius:3px;width:360px;padding:5px;margin:10px 0 0 0;color:black;}
 
 #ThemeBox {padding:0;margin:0;text-align:left;width: 170px;}
